--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="mean_logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mean Girls Party</title>
-    <link rel="stylesheet" href="/src/styles">
+    <link rel="stylesheet" href="/src/styles/global.css">
   </head>
   <body id="background">
     <div id="root"></div>
